objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Sales_Plan_Year__c</fullName>
        <label>Sales Plan Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dallas Hodgson</fullName>
                </value>
                <value>
                    <fullName>Scott Clymer</fullName>
                </value>
                <value>
                    <fullName>House Account</fullName>
                </value>
                <value>
                    <fullName>Josh Murphy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <description>(1) New contract, (2) Renewal of existing contract, (3) Expansion on existing contract</description>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scott_Approved_Written_Proposal_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scott Approved Written Proposal/Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scott_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scott Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_End_Date__c</fullName>
        <label>Services: End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services_Percentage__c</fullName>
        <label>Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Services_Start_Date__c</fullName>
        <label>Services: Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <description>Services</description>
        <label>Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Signed_MSA__c</fullName>
        <description>Pull from the dropdown if we have a Master Agreement in place with the Customer</description>
        <label>Master Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Master Services Agreement (MSA)</fullName>
                </value>
                <value>
                    <fullName>General Services Agreement (GSA)</fullName>
                </value>
                <value>
                    <fullName>Licensing Agreement (LA)</fullName>
                </value>
                <value>
                    <fullName>Services Agreement (SA)</fullName>
                </value>
                <value>
                    <fullName>Other Agreement (OA)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Studies__c</fullName>
        <label>Number of Studies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission_Deadline_Date__c</fullName>
        <label>Submission Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Percentage__c</fullName>
        <label>Subscription</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TestMid__c</fullName>
        <formula>Mid (Contract_ID__c, 12, 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestMid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area__c</fullName>
        <label>Therapeutic Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Biosimilars</fullName>
                </value>
                <value>
                    <fullName>Cardiology/Vascular Diseases</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Endocrine/Metabolic</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>Gynecology/Obstetrics</fullName>
                </value>
                <value>
                    <fullName>Hematology</fullName>
                </value>
                <value>
                    <fullName>Immunology/Rheumatology</fullName>
                </value>
                <value>
                    <fullName>Infections/Infectious Diseases</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Musculoskeletal</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Nephrology/Urology</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology</fullName>
                </value>
                <value>
                    <fullName>Psychiatry/Psychology</fullName>
                </value>
                <value>
                    <fullName>Pulmonary/Respiratory Diseases</fullName>
                </value>
                <value>
                    <fullName>Radiology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upcoming_Demo__c</fullName>
        <label>Upcoming Demo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2015_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of original 2015 Plan</description>
        <label>2015 Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Calls__c</fullName>
        <label># of Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Emails__c</fullName>
        <label># of Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Meetings__c</fullName>
        <label># of Meetings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Opps_SFID</fullName>
        <columns>Opportunity_ID__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Sales_Plan_Amount__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opps - SFID</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextYear</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_YEAR</value>
        </filters>
        <label>Closing Next Year</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>GROWTH_Active_Outreach</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>GROWTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Qualification/Prospecting</value>
        </filters>
        <label>GROWTH Active Outreach</label>
    </listViews>
    <listViews>
        <fullName>GROWTH_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>GROWTH</value>
        </filters>
        <label>GROWTH Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Josh_Deals</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>Opportunity_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Murphy</value>
        </filters>
        <label>Josh's Deals - All</label>
    </listViews>
    <listViews>
        <fullName>Josh_Pipeline</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>Opportunity_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Murphy</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>lessThan</operation>
            <value>100</value>
        </filters>
        <label>Josh's Deals - Pipeline</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Scott_Deals</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>Opportunity_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Clymer</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Scott's Deals - All</label>
    </listViews>
    <listViews>
        <fullName>Scott_Pipeline</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>Opportunity_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Clymer</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>lessThan</operation>
            <value>100</value>
        </filters>
        <label>Scott's Deals - Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Steve_Deals</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>Opportunity_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Williams</value>
        </filters>
        <label>Steve's Deals - All</label>
    </listViews>
    <listViews>
        <fullName>Steve_Pipeline</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>Opportunity_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Williams</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>lessThan</operation>
            <value>100</value>
        </filters>
        <label>Steve's Deals - Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Default_Opportunity_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Default Sales Process</businessProcess>
        <description>Opportunity record type by default</description>
        <label>Default Opportunity Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal_Opportunity_Record_Type</fullName>
        <active>false</active>
        <businessProcess>Renewal Sales Process</businessProcess>
        <description>Opportunity record type for renewal opportunity.</description>
        <label>Renewal Opportunity Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Plan_Opportunity_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Default Sales Process</businessProcess>
        <description>Opportunity record type for Sales Plan data</description>
        <label>Sales Plan Opportunity Record Type</label>
    </recordTypes>
    <validationRules>
        <fullName>Competitive_RFP_Until_Approved</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    NOT(Mika_Approved_RFP__c),
    OR(
       ISPICKVAL( StageName, "Verbal Proposal/Price Quote" ),
       ISPICKVAL( StageName, "Written Proposal/Price Quote" ),
       ISPICKVAL( StageName, "Customer Verbal Commit" ),
       ISPICKVAL( StageName, "Client Approving Internally" ),
       ISPICKVAL( StageName, "Negotiating Contract /SOW" ),
       ISPICKVAL( StageName, "Finalizing Contract/SOW" ),
       ISPICKVAL( StageName, "Closed Won" )
     )
)</errorConditionFormula>
        <errorMessage>You cannot advance beyond Competitive RFP until it is approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Upload_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IsWon &amp;&amp; !Contract_Uploaded__c</errorConditionFormula>
        <errorMessage>Contract must be uploaded to mark an Opportunity as Closed Won. If you require an override, please contact a system administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Verbal_Commit</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    NOT(Mika_Approved_Customer_Verbal_Commit__c), 
    OR(
       ISPICKVAL( StageName, "Client Approving Internally" ),
       ISPICKVAL( StageName, "Negotiating Contract /SOW" ),
       ISPICKVAL( StageName, "Finalizing Contract/SOW" ),
       ISPICKVAL( StageName, "Closed Won" )
     )
)</errorConditionFormula>
        <errorMessage>You cannot advance beyond Customer Verbal Commit until it is approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Doc_Label_Quote_Until_Approved_Over_1M</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    RecordTypeId != '012G0000001cnNf',
    OR (
       NOT(Mika_Approved_Written_Proposal_Quote__c),
       NOT(Bob_Approved_Written_Proposal_Quote__c),
       NOT(Scott_Approved_Written_Proposal_Quote__c)
    ),
    Amount  &gt;= 1000000, 
    OR(
       ISPICKVAL( StageName, "Proposal Submitted" ),
       ISPICKVAL( StageName, "Negotiating Contract/SOW" ),
       ISPICKVAL( StageName, "Finalizing Contract/SOW" ),
       ISPICKVAL( StageName, "Closed Won" )
     ),
     ISPICKVAL( Product_Category__c, "DOC Label") 
)</errorConditionFormula>
        <errorMessage>You cannot advance beyond Written Proposal/Price Quote - Internal Review until it is approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Finalizing_Contract_SOW</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR (
        NOT(Bob_Scott_Approved_Final_Contract_SOW__c)
    ), 
    ISPICKVAL( StageName, "Closed Won" )
)</errorConditionFormula>
        <errorMessage>You cannot advance beyond Finalizing Contract/SOW until it is approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Negotiating_Contract_SOW</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    NOT(Mika_Approved_Negotiating_Contract_SOW__c), 
    OR(
       ISPICKVAL( StageName, "Finalizing Contract/SOW" ),
       ISPICKVAL( StageName, "Closed Won" )
     )
)</errorConditionFormula>
        <errorMessage>You cannot advance beyond Negotiating Contract/SOW until it is approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_Allocation_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Override_Allocations__c, (
IF(ISBLANK(Subscription_Percentage__c), 0, Subscription_Percentage__c) +
IF(ISBLANK(Services_Percentage__c), 0, Services_Percentage__c ) +
IF(ISBLANK(DOC_Data_Configuration__c ), 0, DOC_Data_Configuration__c ) +
IF(ISBLANK(DOC_Data_Licensing__c ), 0, DOC_Data_Licensing__c ) +
IF(ISBLANK(DOC_Library_Configuration__c ), 0, DOC_Library_Configuration__c ) +
IF(ISBLANK(DOC_Library_Licensing__c ), 0, DOC_Library_Licensing__c ) != 1))</errorConditionFormula>
        <errorMessage>Please check the percentages of product allocation. Its sum should be 100%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Plan_Year</fullName>
        <active>true</active>
        <errorConditionFormula>and(Plan_Year__c &gt;= 2010, Plan_Year__c &lt;=2099)</errorConditionFormula>
        <errorDisplayField>X2015_Plan__c</errorDisplayField>
        <errorMessage>Enter a valid year</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Proposal_Upload_Required</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(StageName,"Proposal Submitted") ||  Probability &gt; 0.5)  &amp;&amp; !Proposal_Uploaded__c</errorConditionFormula>
        <errorMessage>Proposal must be uploaded to mark an Opportunity as Proposal Submitted. If you require an override, please contact a system administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Renewal</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    NOT(Mika_Approved_Renewal__c), 
    OR(
       ISPICKVAL( StageName, "Client Approving Internally" ),
       ISPICKVAL( StageName, "Negotiating Contract /SOW" ),
       ISPICKVAL( StageName, "Finalizing Contract/SOW" ),
       ISPICKVAL( StageName, "Closed Won" )
     )
)</errorConditionFormula>
        <errorMessage>You cannot advance beyond Renewal until it is approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verbal_Quote_Until_Approved</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    NOT(Mika_Approved_Verbal_Proposal_Quote__c),
    OR(
       ISPICKVAL( StageName, "Written Proposal/Price Quote" ),
       ISPICKVAL( StageName, "Customer Verbal Commit" ),
       ISPICKVAL( StageName, "Client Approving Internally" ),
       ISPICKVAL( StageName, "Negotiating Contract /SOW" ),
       ISPICKVAL( StageName, "Finalizing Contract/SOW" ),
       ISPICKVAL( StageName, "Closed Won" )
     )
)</errorConditionFormula>
        <errorMessage>You cannot advance beyond Verbal Proposal/Price Quote until it is approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Written_Quote_Until_Approved_Less_1M</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    RecordTypeId != '012G0000001cnNf', 
    OR (
       NOT(Hae_Approved_Written_Proposal_Quote__c),
       NOT(Mika_Approved_Written_Proposal_Quote__c),
       NOT(Scott_Approved_Written_Proposal_Quote__c)
    ),
    Amount  &lt; 1000000, 
    OR(
       ISPICKVAL( StageName, "Proposal Submitted" ),
       ISPICKVAL( StageName, "Negotiating Contract/SOW" ),
       ISPICKVAL( StageName, "Finalizing Contract/SOW" ),
       ISPICKVAL( StageName, "Closed Won" )
     )
)</errorConditionFormula>
        <errorMessage>You cannot advance beyond Written Proposal/Price Quote - Internal Review until it is approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Written_Quote_Until_Approved_Over_1M</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    RecordTypeId != '012G0000001cnNf',
    OR (
       NOT(Hae_Approved_Written_Proposal_Quote__c),
       NOT(Mika_Approved_Written_Proposal_Quote__c),
       NOT(Bob_Approved_Written_Proposal_Quote__c),
       NOT(Scott_Approved_Written_Proposal_Quote__c)
    ),
    Amount  &gt;= 1000000, 
    OR(
       ISPICKVAL( StageName, "Proposal Submitted" ),
       ISPICKVAL( StageName, "Negotiating Contract/SOW" ),
       ISPICKVAL( StageName, "Finalizing Contract/SOW" ),
       ISPICKVAL( StageName, "Closed Won" )
     ),
     !ISPICKVAL( Product_Category__c, "DOC Label")
)</errorConditionFormula>
        <errorMessage>You cannot advance beyond Written Proposal/Price Quote - Internal Review until it is approved.</errorMessage>
    </validationRules>
</CustomObject>